--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   bot:
-    image: polipaul/agent-v2-bot:0.1
+    image: polipaul/agent-v2-bot:latest
     restart: always
     volumes:
       - ./config:/usr/app/config
