--- a/config/main.example.yaml
+++ b/config/main.example.yaml
@@ -8,8 +8,9 @@
         max_priority_fee_per_gas: 6000000
         agents:
           '0x3356D8E053c301F6618d48d4630A13DCb9e80b96':
-            executor: flashbots
-            keeper_id: 42
+            executor: pga
+            keeper_address: '0x0000000000000000000000000000000000000000'
+            key_pass: myPass
             deployed_at: 7378792
             accept_max_base_fee_limit: false
             accrue_reward: false
