--- a/config/main.template.yaml
+++ b/config/main.template.yaml
@@ -1,7 +1,7 @@
   networks:
     data_source: network
     enabled:
-      - goerli
+      - mainnet
     details:
       mainnet:
         flashbots:
