add agent to compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,11 @@ services:
     volumes:
       - ./config:/usr/app/config
       - ./keys:/usr/app/keys
+  agent:
+    image: powerpool-finance/powerpool-agent-v2-node:latest
+    restart: always
+    volumes:
+      - ./config:/usr/app/config
+      - ./keys:/usr/app/keys
+
+
