--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
-  bot:
-    image: polipaul/agent-v2-bot:latest
+  agent:
+    image: powerpool/power-agent-node:latest
     restart: always
     volumes:
       - ./config:/usr/app/config
