--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,10 @@
 version: "3.9"
 services:
   agent:
-    image: powerpool/power-agent-node:${TAG:-latest}
+    image: powerpool/power-agent-node:latest
     restart: always
     volumes:
       - ./config:/usr/app/config
       - ./keys:/usr/app/keys
+    environment:
+      NODE_ENV: ${NODE_ENV}
