--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
   agent-latest:
     image: powerpool/power-agent-node:latest
@@ -6,13 +7,40 @@ services:
     volumes:
       - ./config:/usr/app/config
       - ./keys:/usr/app/keys
+    ports:
+      - "8099:8099"
     environment:
       NODE_ENV: ${NODE_ENV}
+      API_PORT: 8099
+    profiles: [latest]
+
   agent-dev:
     image: powerpool/power-agent-node:dev
     restart: always
     volumes:
       - ./config:/usr/app/config
       - ./keys:/usr/app/keys
+    ports:
+      - "8099:8099"
     environment:
       NODE_ENV: ${NODE_ENV}
+      API_PORT: 8099
+    profiles: [dev]
+
+  offchain-service:
+    container_name: offchain-service
+    image: powerpool/power-agent-offchain-service:latest
+    restart: always
+    volumes:
+      - ./scriptsFetched:/scriptsFetched
+      - ./scriptToExecute:/scriptToExecute
+      - /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - "3423:3423"
+    environment:
+      EXECUTE_API_HOST: ${EXECUTE_API_HOST}
+      DOCKER_MODE: 1
+    profiles: [latest, dev]
+
+  temp-executor:
+    image: node:18-alpine
