--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
     ports:
       - "3423:3423"
     environment:
-      EXECUTE_API_HOST: ${EXECUTE_API_HOST}
+      AGENT_API_HOST: http://localhost:8099
       DOCKER_MODE: 1
     profiles: [latest, dev]
 
