--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,10 @@ services:
       - ./config:/usr/app/config
       - ./keys:/usr/app/keys
     ports:
-      - "8099:8099"
+      - "${NODE_API_PORT:-8099}:${NODE_API_PORT:-8099}"
     environment:
       NODE_ENV: ${NODE_ENV}
-      API_PORT: 8099
+      API_PORT: ${NODE_API_PORT:-8099}
     profiles: [latest]
 
   agent-dev:
@@ -21,10 +21,10 @@ services:
       - ./config:/usr/app/config
       - ./keys:/usr/app/keys
     ports:
-      - "8099:8099"
+      - "${NODE_API_PORT:-8099}:${NODE_API_PORT:-8099}"
     environment:
       NODE_ENV: ${NODE_ENV}
-      API_PORT: 8099
+      API_PORT: ${NODE_API_PORT:-8099}
     profiles: [dev]
 
   offchain-service:
@@ -38,7 +38,7 @@ services:
     ports:
       - "3423:3423"
     environment:
-      AGENT_API_HOST: http://localhost:8099
+      AGENT_API_HOST: http://localhost:${NODE_API_PORT:-8099}
       DOCKER_MODE: 1
     profiles: [latest, dev]
 
