--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV}
       API_PORT: ${NODE_API_PORT:-8099}
+      OFFCHAIN_SERVICE_ENDPOINT: http://offchain-service:${OFFCHAIN_API_PORT:-3423}
     profiles: [dev]
 
   offchain-service:
@@ -35,7 +36,7 @@ services:
       - ./scriptToExecute:/scriptToExecute
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
-      - "3423:3423"
+      - "${OFFCHAIN_API_PORT:-3423}:${OFFCHAIN_API_PORT:-3423}"
     environment:
       AGENT_API_HOST: http://localhost:${NODE_API_PORT:-8099}
       DOCKER_MODE: 1
