--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,9 @@ services:
     ports:
       - "${OFFCHAIN_API_PORT:-3423}:${OFFCHAIN_API_PORT:-3423}"
     environment:
-      AGENT_API_HOST: http://localhost:${NODE_API_PORT:-8099}
+      NODE_ENV: ${NODE_ENV}
+      API_PORT: ${OFFCHAIN_API_PORT:-3423}
+      AGENT_API_PORT: ${AGENT_API_PORT:-8099}
       DOCKER_MODE: 1
     profiles: [latest, dev]
 
