add OFFCHAIN_MAX_EXECUTION_TIME env

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,7 @@ services:
       API_PORT: ${OFFCHAIN_API_PORT:-3423}
       AGENT_API_PORT: ${NODE_API_PORT:-8099}
       DOCKER_MODE: 1
+      MAX_EXECUTION_TIME: ${OFFCHAIN_MAX_EXECUTION_TIME}
     profiles: [latest, dev]
 
   temp-executor:
